[gd_scene load_steps=14 format=2]

[ext_resource path="res://EuBraBo/assets/inimigos/png-Sheet/explosion_zombie-export.png" type="Texture" id=1]
[ext_resource path="res://EuBraBo/scrips/zumbiExplosion.gd" type="Script" id=2]
[ext_resource path="res://EuBraBo/Sounds/Sounds/explos√£o 2.ogg" type="AudioStream" id=3]
[ext_resource path="res://EuBraBo/Sounds/Passos.ogg" type="AudioStream" id=4]
[ext_resource path="res://EuBraBo/Sounds/Sounds/hit zumbie 1.ogg" type="AudioStream" id=5]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("textura:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "damage"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("textura:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13 ]
}

[sub_resource type="Animation" id=3]
resource_name = "explosion"
length = 0.89
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("textura:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17, 18, 19, 20, 21 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("textura:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=5]
resource_name = "run"
length = 0.49
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("textura:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9 ]
}

[sub_resource type="CapsuleShape2D" id=6]
radius = 7.0
height = 12.0

[sub_resource type="CircleShape2D" id=7]
radius = 295.941

[sub_resource type="CircleShape2D" id=8]
radius = 56.648

[node name="zumbiExplosion" type="KinematicBody2D" groups=["enimigos3"]]
script = ExtResource( 2 )
textura_path = NodePath("textura")
animExplosion_paht = NodePath("AnimExplosion")

[node name="PassosZumbi" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -16.228

[node name="AudioHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Explosivo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="textura" type="Sprite" parent="."]
position = Vector2( 1, -6 )
scale = Vector2( 1.75347, 1.87847 )
texture = ExtResource( 1 )
hframes = 22

[node name="AnimExplosion" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 1 )
anims/damage = SubResource( 2 )
anims/explosion = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/run = SubResource( 5 )

[node name="colisao" type="CollisionShape2D" parent="."]
position = Vector2( -1, 4 )
shape = SubResource( 6 )

[node name="deterquito" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="deterquito"]
position = Vector2( 7, 0 )
shape = SubResource( 7 )

[node name="atack" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="atack"]
shape = SubResource( 8 )

[connection signal="body_entered" from="deterquito" to="." method="_on_deterquito_body_entered"]
[connection signal="body_exited" from="deterquito" to="." method="_on_deterquito_body_exited"]
[connection signal="body_entered" from="atack" to="." method="_on_atack_body_entered"]
